--- a/main.css
+++ b/main.css
@@ -1,37 +1,46 @@
 h1 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    text-decoration: ;
-    color: ;
-    background-color: ;
+    font-size: 20px ;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 10px ;
+    margin:auto ;
+    font-weight: bolder;
+    text-decoration: none;
+    color: black ;
+    background-color: inherit;
+    width: fit-content;
 }
 
 h2 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    color: ;
-    background-color: ;
+    font-size: 20px ;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 10px ;
+    margin:auto ;
+    font-weight: lighter;
+    text-decoration: none;
+    color: black ;
+    background-color: inherit;
+    width: fit-content;
 }
 
 p {
-    font-family: ;
-    font-size: ;
-    padding: ;
-    margin: ;
-    color: ;
-    background-color: ;
+    font-family:Arial, Helvetica, sans-serif ;
+    font-size: 1rem;
+    padding: 10px 10px;
+    margin: 3em 0em;
+    color: black;
+    background-color: lightblue;
 }
 
 .logo {
     background-size: cover;
-    background-image: url();
-    background-color: ;
-    height: ;
-    width: ;
+    background-image: url(https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png);
+    background-color: white;
+    height: 100px;
+    width: 100px;
 }
+
+/* img{
+    max-width: 100px;
+    min-height: 100px
+} */
